objects/ssot__PositionPayGrade__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Position Pay Grade Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayGradeId__c</fullName>
        <label>Pay Grade</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionId__c</fullName>
        <label>Position</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727409956173_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PositionPayGrade_PayGradeId_map_PayG_rel</label>
        <referenceTo>ssot__PayGrade__dlm</referenceTo>
        <relationshipLabel>PositionPayGrade_PayGradeId_map_PayG_rel</relationshipLabel>
        <relationshipName>rel_1727409956173_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727409958014_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PositionPayGrade_PositionId_map_Posi_rel</label>
        <referenceTo>ssot__Position__dlm</referenceTo>
        <relationshipLabel>PositionPayGrade_PositionId_map_Posi_rel</relationshipLabel>
        <relationshipName>rel_1727409958014_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>